# leanflow

./: .gitignore  .gitlab-ci.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  server.yaml  sitemap.xml
api/cli/: index.html
api/client/: index.html
api/errors/: index.html
api/metrics/: index.html
api/repl/: index.html
api/server/: index.html
cli/: index.html
custom_metrics/: index.html
docs/: cli.md  custom_metrics.md  index.md  metrics.md  quickstart.md  repl.md  server.md
docs/api/: cli.md  client.md  errors.md  metrics.md  repl.md  server.md
docs/javascripts/: toggle.js
docs/stylesheets/: extra.css
leanflow/: __init__.py  environment.py  errors.py  evaluate_cli.py  server_cli.py
leanflow/client/: __init__.py  client.py  sync_client.py  utils.py
leanflow/metrics/: __init__.py  base.py  beq.py  beq_l.py  beq_plus.py  conjudge.py  equiv_rfl.py  grader.py  llm_judge_base.py  typecheck.py  utils.py
leanflow/repl/: __init__.py  dataclasses.py  repl.py  sync_repl.py  utils.py
leanflow/server/: __init__.py  api.py  manager.py  server.py  utils.py
leanflow/utils/: __init__.py  dataclasses.py  logger.py  system.py  utils.py
metrics/: index.html
quickstart/: index.html
repl/: index.html
search/: search_index.json
server/: index.html
